--- a/of/app/views/releases/_new_releases.rhtml
+++ b/of/app/views/releases/_new_releases.rhtml
@@ -2,7 +2,7 @@
     <ul>
   <% for release in newReleasesList %>
     <li>
-      <%= link_to release.name, "/projects/#{release.project_id}/releases/#{release.id}" %>
+      <%= link_to h(release.name), "/projects/#{release.project_id}/releases/#{release.id}" %>
     </li>
   <% end %>
     </ul>
